--- a/src/_templates/layouts/default.html
+++ b/src/_templates/layouts/default.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-</head>
-<body>
-    {% block content %}{% endblock %}
-</body>
+<html lang="{{ lang }}">
+  <head>
+    <title>{{ title }}</title>
+    {% include '../partials/meta.html' %}
+    {% block on_head %}
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="/assets/css/index.css">
+    {% endblock %}
+  </head>
+  <body class="{{ body_class | default('') }}">
+    {% block on_body_begin %}
+    {% endblock %}
+    <header class="{{ header_class | default('') }}">
+      {% block page_header %}
+      {% endblock %}
+    </header>
+    <main class="{{ main_class | default('') }}">
+      {% block page_content %}
+      {% endblock %}
+    </main>
+    <footer class="{{ footer_class | default('') }}">
+      {% block page_footer %}
+      {% endblock %}
+    </footer>
+    {% block on_body_end %}
+      {% if debug %}  
+        <script src="{{ codio_domain | default('localhost') }}:3001/livereload.js"></script>
+      {% endif %}
+    {% endblock %}
+  </body>
 </html>
