--- a/src/_templates/layouts/default.html
+++ b/src/_templates/layouts/default.html
@@ -25,7 +25,7 @@
     </footer>
     {% block on_body_end %}
       {% if debug %}  
-        <script src="{{ codio_domain | default('localhost') }}:3001/livereload.js"></script>
+        <script src="{{ ENV.livereload_file_url | default('http://localhost:3001/livereload.js') }}"></script>
       {% endif %}
     {% endblock %}
   </body>
